--- a/POTEPAN 作成物/index.html
+++ b/POTEPAN 作成物/index.html
@@ -18,7 +18,7 @@
 <div class="navarea">
 <nav class="gnav">
  <ul>
- <li><a href="">CONTENT<br>学習内容</a></li>
+ <li><a href="https://camp.potepan.com/content">CONTENT<br>学習内容</a></li>
  <li><a href="">INTERVIEW<br>受講生の声</a></li>
  <li><a href="">FAQ<br>よくある質問</a></li>
  <li><a href="">RECRUIT<br>採用企業様へ</a></li>
@@ -50,3 +50,4 @@
 </本田香澄>
 </body>
 </html>
+
