Fix links and typos in index.html
Updated various links and fixed typos in the HTML structure.

Signed-off-by: horudingu-ai <horudingu@gmail.com>

--- a/POTEPAN 作成物/index.html
+++ b/POTEPAN 作成物/index.html
@@ -13,19 +13,21 @@
 <body>
 <header class="header">
   <div class="logo">
-    <img src="img/header-logo-sp.webp">
+    <a href="https://camp.potepan.com/"
+      img src="img/header-logo-sp.webp">
 </div>
 <div class="navarea">
 <nav class="gnav">
  <ul>
  <li><a href="https://camp.potepan.com/content">CONTENT<br>学習内容</a></li>
- <li><a href="">INTERVIEW<br>受講生の声</a></li>
- <li><a href="">FAQ<br>よくある質問</a></li>
- <li><a href="">RECRUIT<br>採用企業様へ</a></li>
- <li><a href="">U29<br>29歳以上の方へ</a></li>
+ <li><a href="https://camp.potepan.com/interview">INTERVIEW<br>受講生の声</a></li>
+ <li><a href="https://camp.potepan.com/faq">FAQ<br>よくある質問</a></li>
+ <li><a href="https://camp.potepan.com/recruit">RECRUIT<br>採用企業様へ</a></li>
+ <li><a href="https://camp.potepan.com/courses/free-under-29">U29<br>29歳以下の方へ</a></li>
 </ul>  
 </nav>
-<a class="counsel-btn" href="/counseling-book" role="button" aria-label="無料カウンセリングを申し込む">
+<a herf="https://camp.potepan.com/contact" 
+  class="counsel-btn" href="/counseling-book" role="button" aria-label="無料カウンセリングを申し込む">
   無料カウンセリング
 </a>
 </div>
@@ -44,10 +46,12 @@
 ※ショッパーズアイ「プログラミングスクール10社を対象にしたサイト比較イメージ調査<br>
 （2020 年 5 月 22 日～25 日）」より全国の22～49歳の男女691名へのインターネット調査
 </h3>
-<a class="mmbtn" href="/counseling-book" role="button" aria-label="無料カウンセリングを申し込む">
+<a href="https://camp.potepan.com/contact" 
+  class="mmbtn" href="/counseling-book" role="button" aria-label="無料カウンセリングを申し込む">
   まずは無料カウンセリングへ
 </a>
 </本田香澄>
 </body>
 </html>
+
 
